Fix exam timer text wrapping on smaller screens
This fixes wrapping the exam-text bar on smaller screens during timed exams, which prevented users from viewing the exam's content.

--- a/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/lms/static/sass/course/layout/_courseware_preview.scss
@@ -83,7 +83,10 @@ $proctoring-banner-text-size: 14px;
 
     .exam-text {
       display: inline-block;
-      width: calc(100% - 250px);
+
+      @include media-breakpoint-up(md) {
+        width: calc(100% - 250px);
+      }
     }
 
     a {
